2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.in: 

2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.in:
	* Titania.pidb:
	* Titania.cproj: 

2015-03-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.pl:
	* Components.pl:
	* ColorPerVertexEditor.cpp: 

2015-01-23  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* BrowserWidget.x3dv: 

2015-01-09  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-12-28  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-12-23  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* ChangeLog: 

2014-12-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2014-12-13  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureEditor.xml: 

2014-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.cpp: 

2014-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp: 

2014-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.h:
	* AnimationEditor.cpp: 

2014-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h: 

2014-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp: 

2014-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* AnimationEditor.xml:
	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* TextureCoordinateEditor.xml:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-12-09  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointEditor.h:
	* ViewpointEditor.cpp: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditorPreview.x3dv:
	* TextureCoordinateEditorLeftPreview.x3dv:
	* TextureCoordinateEditorRightPreview.x3dv: 

2014-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* RotationTool.x3dv: 
