@@ -31,7 +31,7 @@ DUALCASE=1; export DUALCASE # for MKS sh
 # if CDPATH is set.
 (unset CDPATH) >/dev/null 2>&1 && unset CDPATH
 
-relink_command="(cd /home/holger/Projekte/Titania/Titania; { test -z \"\${LIBRARY_PATH+set}\" || unset LIBRARY_PATH || { LIBRARY_PATH=; export LIBRARY_PATH; }; }; { test -z \"\${COMPILER_PATH+set}\" || unset COMPILER_PATH || { COMPILER_PATH=; export COMPILER_PATH; }; }; { test -z \"\${GCC_EXEC_PREFIX+set}\" || unset GCC_EXEC_PREFIX || { GCC_EXEC_PREFIX=; export GCC_EXEC_PREFIX; }; }; { test -z \"\${LD_RUN_PATH+set}\" || unset LD_RUN_PATH || { LD_RUN_PATH=; export LD_RUN_PATH; }; }; { test -z \"\${LD_LIBRARY_PATH+set}\" || unset LD_LIBRARY_PATH || { LD_LIBRARY_PATH=; export LD_LIBRARY_PATH; }; }; PATH=/home/holger/bin:/home/holger/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games; export PATH; g++ -Wall -std=c++11 -fopenmp -Wno-pmf-conversions -Wno-narrowing -rdynamic -o \$progdir/\$file Titania/Base/X3DBaseInterface.o Titania/Base/X3DDialogInterface.o Titania/Base/X3DEditorObject.o Titania/Base/X3DUserInterface.o Titania/Browser/AboutTab.o Titania/Browser/BrowserHistory.o Titania/Browser/BrowserSelection.o Titania/Browser/BrowserWindow.o Titania/Browser/MagicImport.o Titania/Browser/X3DBrowserEditor.o Titania/Browser/X3DBrowserWidget.o Titania/Browser/X3DBrowserWindow.o Titania/Browser/X3DObjectOperations.o Titania/ComposedWidgets/Cairo.o Titania/Configuration/config.o Titania/Configuration/Configuration.o Titania/Dialogs/FileImportDialog/FileImportDialog.o Titania/Dialogs/FileOpenDialog/FileOpenDialog.o Titania/Dialogs/FileSaveDialog/FileSaveDialog.o Titania/Dialogs/FileSaveWarningDialog/FileSaveWarningDialog.o Titania/Dialogs/NodeIndex/NodeIndex.o Titania/Dialogs/OpenLocationDialog/OpenLocationDialog.o Titania/Editors/AppearanceEditor/AppearanceEditor.o Titania/Editors/AppearanceEditor/X3DFillPropertiesEditor.o Titania/Editors/AppearanceEditor/X3DLinePropertiesEditor.o Titania/Editors/AppearanceEditor/X3DMaterialEditor.o Titania/Editors/AppearanceEditor/X3DMaterialPaletteEditor.o Titania/Editors/ColorPerVertexEditor/ColorPerVertexEditor.o Titania/Editors/FaceSelection.o Titania/Editors/GeometryPropertiesEditor/GeometryPropertiesEditor.o Titania/Editors/GeometryPropertiesEditor/X3DPrimitiveCountEditor.o Titania/Editors/GridEditor/AngleTool.o Titania/Editors/GridEditor/GridEditor.o Titania/Editors/GridEditor/GridTool.o Titania/Editors/GridEditor/X3DAngleEditor.o Titania/Editors/GridEditor/X3DGridEditor.o Titania/Editors/InlineEditor/InlineEditor.o Titania/Editors/LightEditor/LightEditor.o Titania/Editors/LightEditor/X3DDirectionalLightEditor.o Titania/Editors/LightEditor/X3DPointLightEditor.o Titania/Editors/LightEditor/X3DSpotLightEditor.o Titania/Editors/LODEditor/LODEditor.o Titania/Editors/LODEditor/X3DLODEditor.o Titania/Editors/MotionBlurEditor/MotionBlurEditor.o Titania/Editors/NavigationInfoEditor/NavigationInfoEditor.o Titania/Editors/NodePropertiesEditor/NodePropertiesEditor.o Titania/Editors/NodePropertiesEditor/X3DExportedNodesEditor.o Titania/Editors/NodePropertiesEditor/X3DImportedNodesEditor.o Titania/Editors/NodePropertiesEditor/X3DUserDefinedFieldsEditor.o Titania/Editors/PrecisionPlacementPanel/PrecisionPlacementPanel.o Titania/Editors/PrecisionPlacementPanel/X3DBillboardEditor.o Titania/Editors/PrecisionPlacementPanel/X3DGeoLocationEditor.o Titania/Editors/PrecisionPlacementPanel/X3DGeoTransformEditor.o Titania/Editors/PrecisionPlacementPanel/X3DLayoutEditor.o Titania/Editors/PrecisionPlacementPanel/X3DTransformEditor.o Titania/Editors/PrecisionPlacementPanel/X3DViewportEditor.o Titania/Editors/PrototypeInstanceDialog/PrototypeInstanceDialog.o Titania/Editors/TextEditor/TextEditor.o Titania/Editors/TextEditor/X3DFontStyleNodeEditor.o Titania/Editors/TextureCoordinateEditor/TextureCoordinateEditor.o Titania/Editors/TextureEditor/TextureEditor.o Titania/Editors/TextureEditor/X3DImageTextureEditor.o Titania/Editors/TextureEditor/X3DMovieTextureEditor.o Titania/Editors/TextureEditor/X3DPixelTextureEditor.o Titania/Editors/TextureEditor/X3DTexture2DNodeEditor.o Titania/Editors/TextureEditor/X3DTextureCoordinateGeneratorEditor.o Titania/Editors/TextureEditor/X3DTextureNodeEditor.o Titania/Editors/TextureEditor/X3DTexturePaletteEditor.o Titania/Editors/TextureEditor/X3DTexturePropertiesEditor.o Titania/Editors/TextureEditor/X3DTextureTransformEditor.o Titania/Editors/TextureEditor/X3DTextureTransformNodeEditor.o Titania/Editors/ViewpointEditor/ViewpointEditor.o Titania/Editors/ViewpointEditor/X3DGeoViewpointEditor.o Titania/Editors/ViewpointEditor/X3DOrthoViewpointEditor.o Titania/Editors/ViewpointEditor/X3DViewpointEditor.o Titania/main.o Titania/Undo/UndoGroup.o Titania/Undo/UndoHistory.o Titania/Undo/UndoStep.o Titania/UserInterfaces/X3DAnimationEditorInterface.o Titania/UserInterfaces/X3DAppearanceEditorInterface.o Titania/UserInterfaces/X3DBrowserWindowInterface.o Titania/UserInterfaces/X3DColorPerVertexEditorInterface.o Titania/UserInterfaces/X3DConsoleInterface.o Titania/UserInterfaces/X3DFileImportDialogInterface.o Titania/UserInterfaces/X3DFileOpenDialogInterface.o Titania/UserInterfaces/X3DFileSaveDialogInterface.o Titania/UserInterfaces/X3DFileSaveWarningDialogInterface.o Titania/UserInterfaces/X3DGeometryPropertiesEditorInterface.o Titania/UserInterfaces/X3DGridEditorInterface.o Titania/UserInterfaces/X3DHistoryViewInterface.o Titania/UserInterfaces/X3DInlineEditorInterface.o Titania/UserInterfaces/X3DLibraryViewInterface.o Titania/UserInterfaces/X3DLightEditorInterface.o Titania/UserInterfaces/X3DLODEditorInterface.o Titania/UserInterfaces/X3DMotionBlurEditorInterface.o Titania/UserInterfaces/X3DNavigationInfoEditorInterface.o Titania/UserInterfaces/X3DNodeIndexInterface.o Titania/UserInterfaces/X3DNodePropertiesEditorInterface.o Titania/UserInterfaces/X3DOpenLocationDialogInterface.o Titania/UserInterfaces/X3DOutlineEditorInterface.o Titania/UserInterfaces/X3DPrecisionPlacementPanelInterface.o Titania/UserInterfaces/X3DPrototypeInstanceDialogInterface.o Titania/UserInterfaces/X3DScriptEditorInterface.o Titania/UserInterfaces/X3DTextEditorInterface.o Titania/UserInterfaces/X3DTextureCoordinateEditorInterface.o Titania/UserInterfaces/X3DTextureEditorInterface.o Titania/UserInterfaces/X3DViewpointEditorInterface.o Titania/UserInterfaces/X3DViewpointListInterface.o Titania/Widgets/AnimationEditor/AnimationEditor.o Titania/Widgets/Console/Console.o Titania/Widgets/HistoryView/History.o Titania/Widgets/HistoryView/HistoryView.o Titania/Widgets/LibraryView/LibraryView.o Titania/Widgets/OutlineEditor/CellRenderer/OutlineCellRenderer.o Titania/Widgets/OutlineEditor/CellRenderer/OutlineSeparator.o Titania/Widgets/OutlineEditor/CellRenderer/TextViewEditable.o Titania/Widgets/OutlineEditor/CellRenderer/X3DTextViewEditable.o Titania/Widgets/OutlineEditor/OutlineDragDrop.o Titania/Widgets/OutlineEditor/OutlineEditor.o Titania/Widgets/OutlineEditor/OutlineRouteGraph.o Titania/Widgets/OutlineEditor/OutlineSelection.o Titania/Widgets/OutlineEditor/OutlineTreeData.o Titania/Widgets/OutlineEditor/OutlineTreeModel.o Titania/Widgets/OutlineEditor/OutlineTreeObserver.o Titania/Widgets/OutlineEditor/OutlineTreeViewEditor.o Titania/Widgets/OutlineEditor/X3DOutlineTreeView.o Titania/Widgets/ScriptEditor/ScriptEditor.o Titania/Widgets/ViewpointList/ViewpointList.o -pthread -pthread  -lgtksourceviewmm-3.0 -lgtksourceview-3.0 /usr/lib/libgconfmm-2.6.so -lgconf-2 -L/usr/lib/x86_64-linux-gnu -lz -lgtkmm-3.0 -latkmm-1.6 -lgdkmm-3.0 -lpangomm-1.4 -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -latk-1.0 /usr/lib/x86_64-linux-gnu/libcairo-gobject.so /usr/lib/x86_64-linux-gnu/libcairomm-1.0.so /usr/lib/x86_64-linux-gnu/libcairo.so -lgdk_pixbuf-2.0 -lGLEW /usr/lib/x86_64-linux-gnu/libsqlite3.so /usr/lib/x86_64-linux-gnu/libcurl.so -lgstreamermm-0.10 -lgiomm-2.4 -lgio-2.0 -lxml++-2.6 -lglibmm-2.4 /usr/lib/x86_64-linux-gnu/libsigc-2.0.so /usr/lib/x86_64-linux-gnu/libgstcontroller-0.10.so /usr/lib/x86_64-linux-gnu/libgstdataprotocol-0.10.so /usr/lib/x86_64-linux-gnu/libgstnet-0.10.so -lgstaudio-0.10 -lgstcdda-0.10 -lgsttag-0.10 -lgstinterfaces-0.10 -lgstnetbuffer-0.10 -lgstrtp-0.10 -lgstvideo-0.10 /usr/lib/x86_64-linux-gnu/libgstbase-0.10.so -lgstpbutils-0.10 /usr/lib/x86_64-linux-gnu/libgstreamer-0.10.so -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lxml2 -lfontconfig /usr/lib/x86_64-linux-gnu/libfreetype.so -lftgl -lGLU -lGL -lmozjs185 -lplds4 -lplc4 -lnspr4 -lpcre -lpcrecpp /usr/lib/x86_64-linux-gnu/libMagick++.so /usr/lib/x86_64-linux-gnu/libMagickCore.so -lgtop-2.0 -lglib-2.0 ../libtitania-x3d/.libs/libtitania-x3d.so ../libtitania-gzstream/.libs/libtitania-gzstream.so ../libtitania-opengl-surface/.libs/libtitania-opengl-surface.so ../libtitania-sqlite/.libs/libtitania-sqlite.so ../libtitania-standard/.libs/libtitania-standard.so ../libtitania-stream/.libs/libtitania-stream.so -pthread -fopenmp -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-x3d/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-gzstream/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-opengl-surface/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-sqlite/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-standard/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-stream/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/debian/titania/usr/lib)"
+relink_command="(cd /home/holger/Projekte/Titania/Titania; { test -z \"\${LIBRARY_PATH+set}\" || unset LIBRARY_PATH || { LIBRARY_PATH=; export LIBRARY_PATH; }; }; { test -z \"\${COMPILER_PATH+set}\" || unset COMPILER_PATH || { COMPILER_PATH=; export COMPILER_PATH; }; }; { test -z \"\${GCC_EXEC_PREFIX+set}\" || unset GCC_EXEC_PREFIX || { GCC_EXEC_PREFIX=; export GCC_EXEC_PREFIX; }; }; { test -z \"\${LD_RUN_PATH+set}\" || unset LD_RUN_PATH || { LD_RUN_PATH=; export LD_RUN_PATH; }; }; { test -z \"\${LD_LIBRARY_PATH+set}\" || unset LD_LIBRARY_PATH || { LD_LIBRARY_PATH=; export LD_LIBRARY_PATH; }; }; PATH=/home/holger/bin:/home/holger/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games; export PATH; g++ -Wall -std=c++11 -fopenmp -Wno-pmf-conversions -Wno-narrowing -rdynamic -o \$progdir/\$file Titania/Base/X3DBaseInterface.o Titania/Base/X3DDialogInterface.o Titania/Base/X3DEditorObject.o Titania/Base/X3DUserInterface.o Titania/Browser/AboutTab.o Titania/Browser/BrowserHistory.o Titania/Browser/BrowserSelection.o Titania/Browser/BrowserWindow.o Titania/Browser/MagicImport.o Titania/Browser/X3DBrowserEditor.o Titania/Browser/X3DBrowserWidget.o Titania/Browser/X3DBrowserWindow.o Titania/Browser/X3DObjectOperations.o Titania/ComposedWidgets/Cairo.o Titania/Configuration/config.o Titania/Configuration/Configuration.o Titania/Dialogs/FileImportDialog/FileImportDialog.o Titania/Dialogs/FileOpenDialog/FileOpenDialog.o Titania/Dialogs/FileSaveDialog/FileSaveDialog.o Titania/Dialogs/FileSaveWarningDialog/FileSaveWarningDialog.o Titania/Dialogs/NodeIndex/NodeIndex.o Titania/Dialogs/OpenLocationDialog/OpenLocationDialog.o Titania/Editors/AppearanceEditor/AppearanceEditor.o Titania/Editors/AppearanceEditor/X3DFillPropertiesEditor.o Titania/Editors/AppearanceEditor/X3DLinePropertiesEditor.o Titania/Editors/AppearanceEditor/X3DMaterialEditor.o Titania/Editors/AppearanceEditor/X3DMaterialPaletteEditor.o Titania/Editors/ColorPerVertexEditor/ColorPerVertexEditor.o Titania/Editors/FaceSelection.o Titania/Editors/GeometryPropertiesEditor/GeometryPropertiesEditor.o Titania/Editors/GeometryPropertiesEditor/X3DPrimitiveCountEditor.o Titania/Editors/GridEditor/AngleTool.o Titania/Editors/GridEditor/GridEditor.o Titania/Editors/GridEditor/GridTool.o Titania/Editors/GridEditor/X3DAngleEditor.o Titania/Editors/GridEditor/X3DGridEditor.o Titania/Editors/InlineEditor/InlineEditor.o Titania/Editors/LightEditor/LightEditor.o Titania/Editors/LightEditor/X3DDirectionalLightEditor.o Titania/Editors/LightEditor/X3DPointLightEditor.o Titania/Editors/LightEditor/X3DSpotLightEditor.o Titania/Editors/LODEditor/LODEditor.o Titania/Editors/LODEditor/X3DLODEditor.o Titania/Editors/MotionBlurEditor/MotionBlurEditor.o Titania/Editors/NavigationInfoEditor/NavigationInfoEditor.o Titania/Editors/NodePropertiesEditor/NodePropertiesEditor.o Titania/Editors/NodePropertiesEditor/X3DExportedNodesEditor.o Titania/Editors/NodePropertiesEditor/X3DImportedNodesEditor.o Titania/Editors/NodePropertiesEditor/X3DUserDefinedFieldsEditor.o Titania/Editors/PrecisionPlacementPanel/PrecisionPlacementPanel.o Titania/Editors/PrecisionPlacementPanel/X3DBillboardEditor.o Titania/Editors/PrecisionPlacementPanel/X3DGeoLocationEditor.o Titania/Editors/PrecisionPlacementPanel/X3DGeoTransformEditor.o Titania/Editors/PrecisionPlacementPanel/X3DLayoutEditor.o Titania/Editors/PrecisionPlacementPanel/X3DTransformEditor.o Titania/Editors/PrecisionPlacementPanel/X3DViewportEditor.o Titania/Editors/PrototypeInstanceDialog/PrototypeInstanceDialog.o Titania/Editors/TextEditor/TextEditor.o Titania/Editors/TextEditor/X3DFontStyleNodeEditor.o Titania/Editors/TextureCoordinateEditor/TextureCoordinateEditor.o Titania/Editors/TextureEditor/TextureEditor.o Titania/Editors/TextureEditor/X3DImageTextureEditor.o Titania/Editors/TextureEditor/X3DMovieTextureEditor.o Titania/Editors/TextureEditor/X3DPixelTextureEditor.o Titania/Editors/TextureEditor/X3DTexture2DNodeEditor.o Titania/Editors/TextureEditor/X3DTextureCoordinateGeneratorEditor.o Titania/Editors/TextureEditor/X3DTextureNodeEditor.o Titania/Editors/TextureEditor/X3DTexturePaletteEditor.o Titania/Editors/TextureEditor/X3DTexturePropertiesEditor.o Titania/Editors/TextureEditor/X3DTextureTransformEditor.o Titania/Editors/TextureEditor/X3DTextureTransformNodeEditor.o Titania/Editors/ViewpointEditor/ViewpointEditor.o Titania/Editors/ViewpointEditor/X3DGeoViewpointEditor.o Titania/Editors/ViewpointEditor/X3DOrthoViewpointEditor.o Titania/Editors/ViewpointEditor/X3DViewpointEditor.o Titania/main.o Titania/Undo/UndoGroup.o Titania/Undo/UndoHistory.o Titania/Undo/UndoStep.o Titania/UserInterfaces/X3DAnimationEditorInterface.o Titania/UserInterfaces/X3DAppearanceEditorInterface.o Titania/UserInterfaces/X3DBrowserWindowInterface.o Titania/UserInterfaces/X3DColorPerVertexEditorInterface.o Titania/UserInterfaces/X3DConsoleInterface.o Titania/UserInterfaces/X3DFileImportDialogInterface.o Titania/UserInterfaces/X3DFileOpenDialogInterface.o Titania/UserInterfaces/X3DFileSaveDialogInterface.o Titania/UserInterfaces/X3DFileSaveWarningDialogInterface.o Titania/UserInterfaces/X3DGeometryPropertiesEditorInterface.o Titania/UserInterfaces/X3DGridEditorInterface.o Titania/UserInterfaces/X3DHistoryViewInterface.o Titania/UserInterfaces/X3DInlineEditorInterface.o Titania/UserInterfaces/X3DLibraryViewInterface.o Titania/UserInterfaces/X3DLightEditorInterface.o Titania/UserInterfaces/X3DLODEditorInterface.o Titania/UserInterfaces/X3DMotionBlurEditorInterface.o Titania/UserInterfaces/X3DNavigationInfoEditorInterface.o Titania/UserInterfaces/X3DNodeIndexInterface.o Titania/UserInterfaces/X3DNodePropertiesEditorInterface.o Titania/UserInterfaces/X3DOpenLocationDialogInterface.o Titania/UserInterfaces/X3DOutlineEditorInterface.o Titania/UserInterfaces/X3DPrecisionPlacementPanelInterface.o Titania/UserInterfaces/X3DPrototypeInstanceDialogInterface.o Titania/UserInterfaces/X3DScriptEditorInterface.o Titania/UserInterfaces/X3DTextEditorInterface.o Titania/UserInterfaces/X3DTextureCoordinateEditorInterface.o Titania/UserInterfaces/X3DTextureEditorInterface.o Titania/UserInterfaces/X3DViewpointEditorInterface.o Titania/UserInterfaces/X3DViewpointListInterface.o Titania/Widgets/AnimationEditor/AnimationEditor.o Titania/Widgets/Console/Console.o Titania/Widgets/HistoryView/History.o Titania/Widgets/HistoryView/HistoryView.o Titania/Widgets/LibraryView/LibraryView.o Titania/Widgets/OutlineEditor/CellRenderer/OutlineCellRenderer.o Titania/Widgets/OutlineEditor/CellRenderer/OutlineSeparator.o Titania/Widgets/OutlineEditor/CellRenderer/TextViewEditable.o Titania/Widgets/OutlineEditor/CellRenderer/X3DTextViewEditable.o Titania/Widgets/OutlineEditor/OutlineDragDrop.o Titania/Widgets/OutlineEditor/OutlineEditor.o Titania/Widgets/OutlineEditor/OutlineRouteGraph.o Titania/Widgets/OutlineEditor/OutlineSelection.o Titania/Widgets/OutlineEditor/OutlineTreeData.o Titania/Widgets/OutlineEditor/OutlineTreeModel.o Titania/Widgets/OutlineEditor/OutlineTreeObserver.o Titania/Widgets/OutlineEditor/OutlineTreeViewEditor.o Titania/Widgets/OutlineEditor/X3DOutlineTreeView.o Titania/Widgets/ScriptEditor/ScriptEditor.o Titania/Widgets/ViewpointList/ViewpointList.o -pthread -pthread  -lgtksourceviewmm-3.0 -lgtksourceview-3.0 /usr/lib/libgconfmm-2.6.so -lgconf-2 -L/usr/lib/x86_64-linux-gnu -lz -lgtkmm-3.0 -latkmm-1.6 -lgdkmm-3.0 -lpangomm-1.4 -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -latk-1.0 /usr/lib/x86_64-linux-gnu/libcairo-gobject.so /usr/lib/x86_64-linux-gnu/libcairomm-1.0.so /usr/lib/x86_64-linux-gnu/libcairo.so -lgdk_pixbuf-2.0 -lGLEW /usr/lib/x86_64-linux-gnu/libsqlite3.so /usr/lib/x86_64-linux-gnu/libcurl.so -lgstreamermm-0.10 -lgiomm-2.4 -lgio-2.0 -lxml++-2.6 -lglibmm-2.4 /usr/lib/x86_64-linux-gnu/libsigc-2.0.so /usr/lib/x86_64-linux-gnu/libgstcontroller-0.10.so /usr/lib/x86_64-linux-gnu/libgstdataprotocol-0.10.so /usr/lib/x86_64-linux-gnu/libgstnet-0.10.so -lgstaudio-0.10 -lgstcdda-0.10 -lgsttag-0.10 -lgstinterfaces-0.10 -lgstnetbuffer-0.10 -lgstrtp-0.10 -lgstvideo-0.10 /usr/lib/x86_64-linux-gnu/libgstbase-0.10.so -lgstpbutils-0.10 /usr/lib/x86_64-linux-gnu/libgstreamer-0.10.so -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lxml2 -lfontconfig /usr/lib/x86_64-linux-gnu/libfreetype.so -lftgl -lGLU -lGL -lmozjs185 -lplds4 -lplc4 -lnspr4 -lpcre -lpcrecpp /usr/lib/x86_64-linux-gnu/libMagick++.so /usr/lib/x86_64-linux-gnu/libMagickCore.so -lgtop-2.0 -lglib-2.0 ../libtitania-x3d/.libs/libtitania-x3d.so ../libtitania-gzstream/.libs/libtitania-gzstream.so ../libtitania-opengl-surface/.libs/libtitania-opengl-surface.so ../libtitania-sqlite/.libs/libtitania-sqlite.so ../libtitania-standard/.libs/libtitania-standard.so ../libtitania-stream/.libs/libtitania-stream.so -pthread -fopenmp -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-x3d/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-gzstream/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-opengl-surface/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-sqlite/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-standard/.libs -Wl,-rpath -Wl,/home/holger/Projekte/Titania/libtitania-stream/.libs -Wl,-rpath -Wl,/home/holger/test-titania/lib -Wl,-rpath -Wl,/home/holger/Projekte/Titania/debian/titania/usr/lib)"
 
 # This environment variable determines our operation mode.
 if test "$libtool_install_magic" = "%%%MAGIC variable%%%"; then
