@@ -156,6 +156,7 @@ libtitania-x3d/Makefile
 Titania/Makefile
 titania-info/Makefile
 x3dtidy/Makefile
+x3d2vrml/Makefile
 test/Makefile
 experimental/Makefile
 po/Makefile.in
