@@ -1,5 +1,10 @@
 2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Makefile.am:
+	* Makefile.in: 
+
+2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.in: 
 
 2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>
