@@ -1,3 +1,9 @@
+2015-03-25  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Makefile.am:
+	* Makefile.in:
+	* x3d2vrml.mdproj: 
+
 2015-03-24  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* x3d2vrml.mdproj: 
